2017-04-10         Arnold D. Robbins     <arnold@skeeve.com>

	* symbol.c (free_bc_mempool): Change `first' from int to bool.

2017-04-07         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awk.h (INSTRUCTION_POOL): Redefine as an array of structures so we
	can track allocated blocks.
	* symbol.c (pools): Make it a pointer to avoid copying.
	(struct instruction_block): Define structure to hold a block of
	allocated instructions.
	(bcfree): Update to use new INSTRUCTION_POOL definition.
	(bcalloc): Allocate an instruction by searching first on the free
	list, second for free space in the current block, or third by
	allocating a new block.
	(set_context): Update to reflect that pools is now a pointer.
	(free_bc_mempool): New helper function to free a pool of a certain size.
	(fre_bcpool): Call free_bc_mempool for each pool.

2017-04-04         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (INSTRUCTION): Add pool_size member.
	[MAX_INSTRUCTION_ALLOC]: New macro.
	(INSTRUCTION_POOL): New type.
	(struct context): Use INSTRUCTION_POOL.
	* array.c (assoc_list): Reorg the code a bit to make sure
	to alway free the INSTRUCTIONs allocated for calling a
	user-supplied sorting function. Based on code by
	Andrew Schorr.
	* symbol.c (free_bcpool): Rework to use an INSTRUCTION_POOL.
	(bcfree, bcalloc): Rework to use separate chains in
	the instruction pool.
	(set_context): Update appropriately.

2017-03-27         Arnold D. Robbins     <arnold@skeeve.com>

	Cause EPIPE errors to stdout to generate a real SIGPIPE.

	* awk.h (die_via_sigpipe): New macro.
	* builtin.c (efwrite): Use it.
	* io.c (non_fatal_flush_std_file): Ditto.
	* main.c (usage): Ditto.

2017-03-25         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (flush_io): Use r_fatal and r_warning for messagefunc
	in the loop.

2017-03-24         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (efwrite): Exit successfully upon EPIPE, as SIGPIPE